--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 
 
-        <title>:: avana LLC ::</title>
+        <title>Елена Букрей</title>
 
 		<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 
